--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
   :root {
     --text-color: white;
     --bg-url: url(./assets/bg-mobile.png);
+	--bg-color: black;
     --stroke-color: rgba(255, 255, 255, 0.5);
     --surface-color: rgba(255, 255, 255, 0.05);
     --surface-color-hover: rgba(0, 0, 0, 0.02);
@@ -17,6 +18,7 @@
   .light {
     --text-color: black;
     --bg-url: url(./assets/bg-mobile-light.png);
+	--bg-color: white;
     --stroke-color: rgba(0, 0, 0, 0.5);
     --surface-color: rgba(0, 0, 0, 0.05);
     --surface-color-hover: rgba(0, 0, 0, 0.02);
@@ -26,6 +28,7 @@
   
   body {
     background: var(--bg-url) no-repeat top center/cover;
+	background-color: var(--bg-url);
     height: 100vh;
   }
   
